--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Welcome</title>
 </head>
 <body>
-    <h1>Welcome to my website</h1>
+    <h1>Welcome to my first live website</h1>
 </body>
 </html>
             
