--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to my first live website</h1>
+    <h1>Welcome to my website</h1>
+    <p>Explore and enjoy the content!</p>
 </body>
 </html>
-            
