--- a/index.html
+++ b/index.html
@@ -1,13 +1,101 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>Welcome to my website</h1>
-    <p>Explore and enjoy the content!</p>
-</body>
-</html>
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>RKy College of Science</title>
+      <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+      <header class="header">
+          <div class="logo">
+              <h1>RKy College of Science</h1>
+          </div>
+          <nav class="nav">
+              <ul>
+                  <li><a href="#about">About Us</a></li>
+                  <li><a href="#departments">Departments</a></li>
+                  <li><a href="#facilities">Facilities</a></li>
+                  <li><a href="#events">Events</a></li>
+                  <li><a href="#contact">Contact</a></li>
+              </ul>
+          </nav>
+      </header>
+
+      <section class="hero">
+          <h2>Welcome to RKy College of Science</h2>
+          <p>Empowering future leaders in science and innovation.</p>
+          <a href="#departments" class="cta-button">Explore Departments</a>
+      </section>
+
+      <section id="about" class="about">
+          <h2>About RKy College</h2>
+          <p>At RKy College of Science, we are dedicated to fostering a learning environment that promotes innovation, research, and excellence in science education.</p>
+          <a href="#departments" class="read-more-button">Read More</a>
+      </section>
+
+  <section id="departments" class="departments">
+      <h2>Our Departments</h2>
+      <div class="department-list">
+          <div class="department-item">
+              <h3><a href="chemistry.html">Department of Chemistry</a></h3>
+              <p>Dedicated to excellence in chemical research and education.</p>
+          </div>
+          <div class="department-item">
+              <h3><a href="physics.html">Department of Physics</a></h3>
+              <p>Offering cutting-edge programs in theoretical and applied physics.</p>
+          </div>
+          <div class="department-item">
+              <h3><a href="biology.html">Department of Biology</a></h3>
+              <p>Exploring life sciences through innovative research and teaching.</p>
+          </div>
+          <div class="department-item">
+              <h3><a href="cs.html">Department of Computer Science</a></h3>
+              <p>Preparing students for careers in technology and innovation.</p>
+          </div>
+      </div>
+  </section>
+
+
+      <section id="facilities" class="facilities">
+          <h2>Our Facilities</h2>
+          <div class="facility-list">
+              <div class="facility-item">
+                  <h3>Library</h3>
+                  <p>State-of-the-art library with extensive academic resources.</p>
+              </div>
+              <div class="facility-item">
+                  <h3>Sports Complex</h3>
+                  <p>Modern facilities for indoor and outdoor sports activities.</p>
+              </div>
+              <div class="facility-item">
+                  <h3>Hostel</h3>
+                  <p>Comfortable and secure accommodations for students.</p>
+              </div>
+              <div class="facility-item">
+                  <h3>Research Labs</h3>
+                  <p>Advanced laboratories for research and experimentation.</p>
+              </div>
+          </div>
+      </section>
+
+      <section id="events" class="events">
+          <h2>Upcoming Events</h2>
+          <ul class="event-list">
+              <li><strong>Science Fair 2025:</strong> Join us for an exciting showcase of student research and innovation.</li>
+              <li><strong>Alumni Meetup:</strong> A special event to reconnect with past graduates and build networks.</li>
+              <li><strong>Workshop on AI:</strong> A hands-on workshop exploring the latest trends in artificial intelligence.</li>
+          </ul>
+      </section>
+
+      <footer class="footer">
+          <p>Follow Us: 
+              <a href="#">Facebook</a> | 
+              <a href="#">Instagram</a> | 
+              <a href="#">Twitter</a>
+          </p>
+          <p>&copy; 2025 RKy College of Science. All Rights Reserved.</p>
+      </footer>
+  </body>
+  </html>
+
