--- a/physics.html
+++ b/physics.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Physics Department - RKy College of Science</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">
@@ -26,14 +27,14 @@
         <p>Advancing knowledge through theoretical and experimental physics.</p>
     </div>
 
-    <section class="about" id="faculty">
+    <div class="about" id="faculty">
         <h3>Faculty Information</h3>
         <p><strong>Head of Department:</strong> Dr. Neha Kumar</p>
         <p><strong>Senior Faculty:</strong> Prof. Aman Verma, Dr. Sanya Kapoor</p>
         <p><strong>Assistant Professors:</strong> Ms. Ritu Singh, Mr. Akash Patel</p>
-    </section>
+    </div>
 
-    <section class="departments" id="chapters">
+    <div class="departments" id="chapters">
         <h3>Chapters Covered</h3>
         <ul>
             <li>Classical Mechanics</li>
@@ -45,9 +46,9 @@
             <li>Nuclear and Particle Physics</li>
             <li>Astrophysics and Cosmology</li>
         </ul>
-    </section>
+    </div>
 
-    <section class="facilities" id="labs">
+    <div class="facilities" id="labs">
         <h3>Laboratory Facilities</h3>
         <div class="facility-list">
             <div class="facility-item">
@@ -64,22 +65,29 @@
             </div>
             <div class="facility-item">
                 <h4>Computational Physics Lab</h4>
-                <p>High-performance computers for simulations and data analysis.</p>
+                <p>Equipped with high-performance computers for simulations and data analysis.</p>
             </div>
         </div>
-    </section>
+    </div>
 
-    <section class="departments" id="details">
+    <div class="events" id="details">
         <h3>Department Details</h3>
-        <p><strong>Number of Classes:</strong> 6 (Undergraduate and Postgraduate)</p>
-        <p><strong>Lab Rooms:</strong> 4 specialized labs</p>
-        <p><strong>Interdisciplinary Connections:</strong> Chemistry, Computer Science</p>
-        <p><strong>Student Capacity:</strong> 180 students per semester</p>
-    </section>
+        <ul class="event-list">
+            <li><strong>Number of Classes:</strong> 4 (Undergraduate and Postgraduate)</li>
+            <li><strong>Lab Rooms:</strong> 4 specialized labs</li>
+            <li><strong>Departments Utilizing Physics:</strong> Engineering, Computer Science</li>
+            <li><strong>Student Capacity:</strong> 180 students per semester</li>
+        </ul>
+    </div>
 
     <div class="footer">
-        <p>Follow Us: <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">Twitter</a></p>
+        <p>Follow Us: 
+            <a href="#">Facebook</a> | 
+            <a href="#">Instagram</a> | 
+            <a href="#">Twitter</a>
+        </p>
         <p>&copy; 2025 RKy College of Science. All Rights Reserved.</p>
     </div>
 </body>
 </html>
+
