--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>RKy College of Science</title>
+      <title>RKY College of Science</title>
       <link rel="stylesheet" href="style.css">
   </head>
   <body>
       <header class="header">
           <div class="logo">
-              <h1>RKy College of Science</h1>
+              <h1>RKY College of Science</h1>
           </div>
           <nav class="nav">
               <ul>
@@ -23,14 +23,14 @@
       </header>
 
       <section class="hero">
-          <h2>Welcome to RKy College of Science</h2>
+          <h2>Welcome to RKY College of Science</h2>
           <p>Empowering future leaders in science and innovation.</p>
           <a href="#departments" class="cta-button">Explore Departments</a>
       </section>
 
       <section id="about" class="about">
-          <h2>About RKy College</h2>
-          <p>At RKy College of Science, we are dedicated to fostering a learning environment that promotes innovation, research, and excellence in science education.</p>
+          <h2>About RKY College</h2>
+          <p>At RKY College of Science, we are dedicated to fostering a learning environment that promotes innovation, research, and excellence in science education.</p>
           <a href="#departments" class="read-more-button">Read More</a>
       </section>
 
@@ -94,7 +94,7 @@
               <a href="#">Instagram</a> | 
               <a href="#">Twitter</a>
           </p>
-          <p>&copy; 2025 RKy College of Science. All Rights Reserved.</p>
+          <p>&copy; 2025 RKY College of Science. All Rights Reserved.</p>
       </footer>
   </body>
   </html>
