--- a/chemistry.html
+++ b/chemistry.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chemistry Department - RKy College of Science</title>
+    <title>Chemistry Department - RKY College of Science</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
         <div class="logo">
-            <h1>RKy College of Science</h1>
+            <h1>RKY College of Science</h1>
         </div>
         <nav class="nav">
             <ul>
@@ -85,7 +85,7 @@
             <a href="#">Instagram</a> | 
             <a href="#">Twitter</a>
         </p>
-        <p>&copy; 2025 RKy College of Science. All Rights Reserved.</p>
+        <p>&copy; 2025 RKY College of Science. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
