--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
       <header class="header">
           <div class="logo">
+              <img src="https://i.ibb.co/G3dMNvKL/Whats-App-Image-2025-02-14-at-01-47-00-22917ab7.jpg" alt="RKY College Logo" class="logo-img">
               <h1>RKY College of Science</h1>
           </div>
           <nav class="nav">
@@ -22,10 +23,12 @@
           </nav>
       </header>
 
-      <section class="hero">
-          <h2>Welcome to RKY College of Science</h2>
-          <p>Empowering future leaders in science and innovation.</p>
-          <a href="#departments" class="cta-button">Explore Departments</a>
+      <section class="hero" style="background: url('https://i.ibb.co/kgyLtBvj/Capture.jpg') center/cover no-repeat;">
+          <div class="hero-content">
+              <h2>Welcome to RKY College of Science</h2>
+              <p>Empowering future leaders in science and innovation.</p>
+              <a href="#departments" class="cta-button">Explore Departments</a>
+          </div>
       </section>
 
       <section id="about" class="about">
@@ -55,7 +58,6 @@
           </div>
       </div>
   </section>
-
 
       <section id="facilities" class="facilities">
           <h2>Our Facilities</h2>
@@ -96,6 +98,54 @@
           </p>
           <p>&copy; 2025 RKY College of Science. All Rights Reserved.</p>
       </footer>
+
+      <style>
+          .hero {
+              height: 60vh;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              text-align: center;
+              color: white;
+              position: relative;
+          }
+
+          .hero::after {
+              content: '';
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              background: rgba(0, 0, 0, 0.5);
+              z-index: 1;
+          }
+
+          .hero-content {
+              position: relative;
+              z-index: 2;
+          }
+
+          .cta-button {
+              margin-top: 20px;
+              padding: 12px 20px;
+              background-color: #0056b3;
+              color: #fff;
+              text-decoration: none;
+              border-radius: 5px;
+              display: inline-block;
+              transition: background 0.3s ease;
+          }
+
+          .cta-button:hover {
+              background-color: #003d82;
+          }
+
+          .logo-img {
+              height: 60px;
+              margin-right: 15px;
+              border-radius: 15px;
+          }
+      </style>
   </body>
   </html>
-
