--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>RKY College of Science</title>
       <link rel="stylesheet" href="style.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
   </head>
   <body>
       <header class="header">
@@ -23,7 +28,7 @@
           </nav>
       </header>
 
-      <section class="hero" style="background: url('https://i.ibb.co/kgyLtBvj/Capture.jpg') center/cover no-repeat;">
+      <section class="hero" style="background: url('https://i.ibb.co/kgyLtBvj/Capture.jpg') center/cover no-repeat;" data-aos="fade-up">
           <div class="hero-content">
               <h2>Welcome to RKY College of Science</h2>
               <p>Empowering future leaders in science and innovation.</p>
@@ -31,57 +36,57 @@
           </div>
       </section>
 
-      <section id="about" class="about">
+      <section id="about" class="about" data-aos="fade-up">
           <h2>About RKY College</h2>
           <p>At RKY College of Science, we are dedicated to fostering a learning environment that promotes innovation, research, and excellence in science education.</p>
           <a href="#departments" class="read-more-button">Read More</a>
       </section>
 
-  <section id="departments" class="departments">
+  <section id="departments" class="departments" data-aos="fade-up">
       <h2>Our Departments</h2>
       <div class="department-list">
-          <div class="department-item">
+          <div class="department-item" data-aos="flip-left">
               <h3><a href="chemistry.html">Department of Chemistry</a></h3>
               <p>Dedicated to excellence in chemical research and education.</p>
           </div>
-          <div class="department-item">
+          <div class="department-item" data-aos="flip-right">
               <h3><a href="physics.html">Department of Physics</a></h3>
               <p>Offering cutting-edge programs in theoretical and applied physics.</p>
           </div>
-          <div class="department-item">
+          <div class="department-item" data-aos="flip-left">
               <h3><a href="biology.html">Department of Biology</a></h3>
               <p>Exploring life sciences through innovative research and teaching.</p>
           </div>
-          <div class="department-item">
+          <div class="department-item" data-aos="flip-right">
               <h3><a href="cs.html">Department of Computer Science</a></h3>
               <p>Preparing students for careers in technology and innovation.</p>
           </div>
       </div>
   </section>
 
-      <section id="facilities" class="facilities">
+      <section id="facilities" class="facilities" data-aos="fade-up">
           <h2>Our Facilities</h2>
           <div class="facility-list">
-              <div class="facility-item">
+              <div class="facility-item" data-aos="zoom-in">
                   <h3>Library</h3>
                   <p>State-of-the-art library with extensive academic resources.</p>
               </div>
-              <div class="facility-item">
+              <div class="facility-item" data-aos="zoom-in">
                   <h3>Sports Complex</h3>
                   <p>Modern facilities for indoor and outdoor sports activities.</p>
               </div>
-              <div class="facility-item">
+              <div class="facility-item" data-aos="zoom-in">
                   <h3>Hostel</h3>
                   <p>Comfortable and secure accommodations for students.</p>
               </div>
-              <div class="facility-item">
+              <div class="facility-item" data-aos="zoom-in">
                   <h3>Research Labs</h3>
                   <p>Advanced laboratories for research and experimentation.</p>
               </div>
           </div>
       </section>
 
-      <section id="events" class="events">
+      <section id="events" class="events" data-aos="fade-up">
           <h2>Upcoming Events</h2>
           <ul class="event-list">
               <li><strong>Science Fair 2025:</strong> Join us for an exciting showcase of student research and innovation.</li>
@@ -90,7 +95,7 @@
           </ul>
       </section>
 
-      <footer class="footer">
+      <footer class="footer" data-aos="fade-up">
           <p>Follow Us: 
               <a href="#">Facebook</a> | 
               <a href="#">Instagram</a> | 
@@ -100,6 +105,33 @@
       </footer>
 
       <style>
+          body {
+              font-family: 'Roboto', sans-serif;
+              margin: 0;
+              padding: 0;
+              background-color: #f4f4f4;
+              color: #333;
+              scroll-behavior: smooth;
+          }
+
+          .header {
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              background: linear-gradient(135deg, #004d99, #002f5e);
+              color: white;
+              padding: 20px;
+              box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+          }
+
+          .nav a {
+              transition: color 0.3s;
+          }
+
+          .nav a:hover {
+              color: #ffcc00;
+          }
+
           .hero {
               height: 60vh;
               display: flex;
@@ -124,28 +156,42 @@
           .hero-content {
               position: relative;
               z-index: 2;
+              animation: fadeIn 2s ease;
+          }
+
+          @keyframes fadeIn {
+              from { opacity: 0; transform: translateY(-20px); }
+              to { opacity: 1; transform: translateY(0); }
           }
 
           .cta-button {
               margin-top: 20px;
               padding: 12px 20px;
-              background-color: #0056b3;
+              background: linear-gradient(45deg, #0056b3, #003d82);
               color: #fff;
               text-decoration: none;
               border-radius: 5px;
               display: inline-block;
-              transition: background 0.3s ease;
+              transition: transform 0.3s ease;
           }
 
           .cta-button:hover {
-              background-color: #003d82;
+              transform: translateY(-5px);
           }
 
           .logo-img {
               height: 60px;
               margin-right: 15px;
-              border-radius: 15px;
+              border-radius: 20px;
+              box-shadow: 0 4px 6px rgba(0,0,0,0.3);
           }
       </style>
+
+      <script>
+          AOS.init({
+              duration: 1000,
+              once: true,
+          });
+      </script>
   </body>
   </html>
