--- a/chemistry.html
+++ b/chemistry.html
@@ -6,6 +6,80 @@
     <title>Chemistry Department - RKY College</title>
     <link rel="stylesheet" href="style.css">
     <style>
+        /* Updated Colors and Animations */
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #ffbe0b, #fb5607, #ff006e, #8338ec, #3a86ff);
+            color: #fff;
+            animation: fadeIn 2s ease-in-out;
+        }
+
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            background-color: #8338ec;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+        }
+
+        .logo h1 {
+            margin: 0;
+            font-size: 2em;
+            color: #ffbe0b;
+            border-radius: 15px;
+            padding: 10px 20px;
+            background: #3a86ff;
+            transition: transform 0.3s ease;
+        }
+        .logo h1:hover {
+            transform: scale(1.1);
+        }
+
+        .nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+
+        .nav li {
+            margin-left: 20px;
+        }
+
+        .nav a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+        .nav a:hover {
+            color: #ffbe0b;
+        }
+
+        .hero {
+            text-align: center;
+            padding: 60px 20px;
+            background: rgba(255, 0, 110, 0.7);
+            border-radius: 20px;
+            margin: 20px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+        }
+
+        .about, .departments, .facilities {
+            margin: 20px;
+            padding: 30px;
+            border-radius: 20px;
+            background: rgba(255, 190, 11, 0.6);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+            transition: transform 0.5s ease;
+        }
+        .about:hover, .departments:hover, .facilities:hover {
+            transform: scale(1.05);
+        }
+
         .video-box {
             border: 4px solid #ffb703;
             border-radius: 15px;
@@ -13,7 +87,7 @@
             margin: 30px auto;
             text-align: center;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-            background-color: #fb8500;
+            background-color: #fb5607;
             animation: fadeIn 2s ease-in-out;
         }
 
@@ -24,14 +98,42 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
 
+        .event-list li {
+            transition: transform 0.3s ease;
+        }
+
+        .event-list li:hover {
+            transform: translateX(10px);
+            color: #ff006e;
+        }
+
+        .facility-item {
+            margin: 10px 0;
+            padding: 15px;
+            border-radius: 10px;
+            background: #3a86ff;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+            transition: transform 0.3s ease;
+        }
+        .facility-item:hover {
+    transform: scale(1.014);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+}
+
+
+        .footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #8338ec;
+            color: #ffbe0b;
+        }
+
         @keyframes fadeIn {
             from {
                 opacity: 0;
-                transform: translateY(30px);
             }
             to {
                 opacity: 1;
-                transform: translateY(0);
             }
         }
     </style>
