--- a/index.html
+++ b/index.html
@@ -1,197 +1,93 @@
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>RKY College of Science</title>
-      <link rel="stylesheet" href="style.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-      <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-  </head>
-  <body>
-      <header class="header">
-          <div class="logo">
-              <img src="https://i.ibb.co/G3dMNvKL/Whats-App-Image-2025-02-14-at-01-47-00-22917ab7.jpg" alt="RKY College Logo" class="logo-img">
-              <h1>RKY College of Science</h1>
-          </div>
-          <nav class="nav">
-              <ul>
-                  <li><a href="#about">About Us</a></li>
-                  <li><a href="#departments">Departments</a></li>
-                  <li><a href="#facilities">Facilities</a></li>
-                  <li><a href="#events">Events</a></li>
-                  <li><a href="#contact">Contact</a></li>
-              </ul>
-          </nav>
-      </header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Food Preservation Techniques</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+</head>
+<body>
+    <header class="header">
+        <div class="container">
+            <div class="logo-container">
+                <img src="https://i.ibb.co/kN2Dty0/Whats-App-Image-2025-02-24-at-20-11-53-48d92e76.jpg" alt="Food Preservation Logo" class="logo-img">
+                <h1 class="logo">Food Preservation Techniques</h1>
+            </div>
+            <nav class="nav">
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#methods">Methods</a></li>
+                    <li><a href="#guides">Guides</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-      <section class="hero" style="background: url('https://i.ibb.co/kgyLtBvj/Capture.jpg') center/cover no-repeat;" data-aos="fade-up">
-          <div class="hero-content">
-              <h2>Welcome to RKY College of Science</h2>
-              <p>Empowering future leaders in science and innovation.</p>
-              <a href="#departments" class="cta-button">Explore Departments</a>
-          </div>
-      </section>
+    <section class="hero" data-aos="fade-up">
+        <div class="hero-content">
+            <h2>Preserve Freshness, Reduce Waste</h2>
+            <p>Discover techniques to extend the shelf life of your food while maintaining its nutrients.</p>
+            <a href="#methods" class="cta-button">Explore Methods</a>
+        </div>
+    </section>
 
-      <section id="about" class="about" data-aos="fade-up">
-          <h2>About RKY College</h2>
-          <p>At RKY College of Science, we are dedicated to fostering a learning environment that promotes innovation, research, and excellence in science education.</p>
-          <a href="#departments" class="read-more-button">Read More</a>
-      </section>
+    <!-- New About Section with Proper Vertical Alignment -->
+    <section id="about" class="about-section" data-aos="fade-up">
+        <div class="container">
+            <h2>What is Food Preservation?</h2>
+            <p>Food preservation is the process of treating and handling food to stop or slow down spoilage, loss of quality, and contamination. It ensures that food remains safe, edible, and nutritious for an extended period.</p>
+            
+            <h2>Why is Food Preservation Important?</h2>
+            <p>Food preservation plays a crucial role in reducing waste, maintaining nutrition, and ensuring food security. Some of its key benefits include:</p>
+            
+            <div class="benefits-list">
+                <div>✅ Reduces food waste by extending shelf life.</div>
+                <div>✅ Maintains nutritional value and taste.</div>
+                <div>✅ Ensures food availability during off-seasons.</div>
+                <div>✅ Prevents the growth of harmful bacteria and mold.</div>
+                <div>✅ Supports food security and sustainability.</div>
+            </div>
+        </div>
+    </section>
 
-  <section id="departments" class="departments" data-aos="fade-up">
-      <h2>Our Departments</h2>
-      <div class="department-list">
-          <div class="department-item" data-aos="flip-left">
-              <h3><a href="chemistry.html">Department of Chemistry</a></h3>
-              <p>Dedicated to excellence in chemical research and education.</p>
-          </div>
-          <div class="department-item" data-aos="flip-right">
-              <h3><a href="physics.html">Department of Physics</a></h3>
-              <p>Offering cutting-edge programs in theoretical and applied physics.</p>
-          </div>
-          <div class="department-item" data-aos="flip-left">
-              <h3><a href="biology.html">Department of Biology</a></h3>
-              <p>Exploring life sciences through innovative research and teaching.</p>
-          </div>
-          <div class="department-item" data-aos="flip-right">
-              <h3><a href="cs.html">Department of Computer Science</a></h3>
-              <p>Preparing students for careers in technology and innovation.</p>
-          </div>
-      </div>
-  </section>
+    <section id="methods" class="methods" data-aos="fade-up">
+        <h2>Food Preservation Techniques</h2>
+        <div class="method-list">
+            <div class="method-item" data-aos="fade-up">
+                <h3>Canning</h3>
+                <p>Lock in freshness with heat-sealed jars for long-term storage.</p>
+            </div>
+            <div class="method-item" data-aos="fade-up">
+                <h3>Fermentation</h3>
+                <p>Enhance flavors naturally using beneficial bacteria.</p>
+            </div>
+            <div class="method-item" data-aos="fade-up">
+                <h3>Dehydration</h3>
+                <p>Remove moisture to keep food fresh without refrigeration.</p>
+            </div>
+            <div class="method-item" data-aos="fade-up">
+                <h3>Freezing</h3>
+                <p>Store food at low temperatures to retain taste and texture.</p>
+            </div>
+            <div class="method-item" data-aos="fade-up">
+                <h3>Salting</h3>
+                <p>Use salt to naturally extend the shelf life of perishable foods.</p>
+            </div>
+        </div>
+    </section>
 
-      <section id="facilities" class="facilities" data-aos="fade-up">
-          <h2>Our Facilities</h2>
-          <div class="facility-list">
-              <div class="facility-item" data-aos="zoom-in">
-                  <h3>Library</h3>
-                  <p>State-of-the-art library with extensive academic resources.</p>
-              </div>
-              <div class="facility-item" data-aos="zoom-in">
-                  <h3>Sports Complex</h3>
-                  <p>Modern facilities for indoor and outdoor sports activities.</p>
-              </div>
-              <div class="facility-item" data-aos="zoom-in">
-                  <h3>Hostel</h3>
-                  <p>Comfortable and secure accommodations for students.</p>
-              </div>
-              <div class="facility-item" data-aos="zoom-in">
-                  <h3>Research Labs</h3>
-                  <p>Advanced laboratories for research and experimentation.</p>
-              </div>
-          </div>
-      </section>
+    <footer class="footer">
+        <p>&copy; 2025 Food Preservation Techniques. All Rights Reserved.</p>
+    </footer>
 
-      <section id="events" class="events" data-aos="fade-up">
-          <h2>Upcoming Events</h2>
-          <ul class="event-list">
-              <li><strong>Science Fair 2025:</strong> Join us for an exciting showcase of student research and innovation.</li>
-              <li><strong>Alumni Meetup:</strong> A special event to reconnect with past graduates and build networks.</li>
-              <li><strong>Workshop on AI:</strong> A hands-on workshop exploring the latest trends in artificial intelligence.</li>
-          </ul>
-      </section>
-
-      <footer class="footer" data-aos="fade-up">
-          <p>Follow Us: 
-              <a href="#">Facebook</a> | 
-              <a href="#">Instagram</a> | 
-              <a href="#">Twitter</a>
-          </p>
-          <p>&copy; 2025 RKY College of Science. All Rights Reserved.</p>
-      </footer>
-
-      <style>
-          body {
-              font-family: 'Roboto', sans-serif;
-              margin: 0;
-              padding: 0;
-              background-color: #f4f4f4;
-              color: #333;
-              scroll-behavior: smooth;
-          }
-
-          .header {
-              display: flex;
-              justify-content: space-between;
-              align-items: center;
-              background: linear-gradient(135deg, #004d99, #002f5e);
-              color: white;
-              padding: 20px;
-              box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-          }
-
-          .nav a {
-              transition: color 0.3s;
-          }
-
-          .nav a:hover {
-              color: #ffcc00;
-          }
-
-          .hero {
-              height: 60vh;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              text-align: center;
-              color: white;
-              position: relative;
-          }
-
-          .hero::after {
-              content: '';
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
-              background: rgba(0, 0, 0, 0.5);
-              z-index: 1;
-          }
-
-          .hero-content {
-              position: relative;
-              z-index: 2;
-              animation: fadeIn 2s ease;
-          }
-
-          @keyframes fadeIn {
-              from { opacity: 0; transform: translateY(-20px); }
-              to { opacity: 1; transform: translateY(0); }
-          }
-
-          .cta-button {
-              margin-top: 20px;
-              padding: 12px 20px;
-              background: linear-gradient(45deg, #0056b3, #003d82);
-              color: #fff;
-              text-decoration: none;
-              border-radius: 5px;
-              display: inline-block;
-              transition: transform 0.3s ease;
-          }
-
-          .cta-button:hover {
-              transform: translateY(-5px);
-          }
-
-          .logo-img {
-              height: 60px;
-              margin-right: 15px;
-              border-radius: 20px;
-              box-shadow: 0 4px 6px rgba(0,0,0,0.3);
-          }
-      </style>
-
-      <script>
-          AOS.init({
-              duration: 1000,
-              once: true,
-          });
-      </script>
-  </body>
-  </html>
+    <script>
+        AOS.init({ duration: 1000, once: true });
+    </script>
+</body>
+</html>
