--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <li><a href="#methods">Methods</a></li>
                     <li><a href="#guides">Guides</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="canning.html">Canning</a></li>
                 </ul>
             </nav>
         </div>
