--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                     <li><a href="#methods">Methods</a></li>
                     <li><a href="#guides">Guides</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="canning.html">Canning</a></li>
                 </ul>
             </nav>
         </div>
@@ -38,15 +37,12 @@
         </div>
     </section>
 
-    <!-- New About Section with Proper Vertical Alignment -->
     <section id="about" class="about-section" data-aos="fade-up">
         <div class="container">
             <h2>What is Food Preservation?</h2>
             <p>Food preservation is the process of treating and handling food to stop or slow down spoilage, loss of quality, and contamination. It ensures that food remains safe, edible, and nutritious for an extended period.</p>
-            
             <h2>Why is Food Preservation Important?</h2>
-            <p>Food preservation plays a crucial role in reducing waste, maintaining nutrition, and ensuring food security. Some of its key benefits include:</p>
-            
+            <p>Food preservation plays a crucial role in reducing waste, maintaining nutrition, and ensuring food security.</p>
             <div class="benefits-list">
                 <div>✅ Reduces food waste by extending shelf life.</div>
                 <div>✅ Maintains nutritional value and taste.</div>
@@ -57,31 +53,31 @@
         </div>
     </section>
 
-    <section id="methods" class="methods" data-aos="fade-up">
-        <h2>Food Preservation Techniques</h2>
-        <div class="method-list">
-            <div class="method-item" data-aos="fade-up">
-                <h3>Canning</h3>
-                <p>Lock in freshness with heat-sealed jars for long-term storage.</p>
-            </div>
-            <div class="method-item" data-aos="fade-up">
-                <h3>Fermentation</h3>
-                <p>Enhance flavors naturally using beneficial bacteria.</p>
-            </div>
-            <div class="method-item" data-aos="fade-up">
-                <h3>Dehydration</h3>
-                <p>Remove moisture to keep food fresh without refrigeration.</p>
-            </div>
-            <div class="method-item" data-aos="fade-up">
-                <h3>Freezing</h3>
-                <p>Store food at low temperatures to retain taste and texture.</p>
-            </div>
-            <div class="method-item" data-aos="fade-up">
-                <h3>Salting</h3>
-                <p>Use salt to naturally extend the shelf life of perishable foods.</p>
-            </div>
+<section id="methods" class="methods" data-aos="fade-up">
+    <h2>Food Preservation Techniques</h2>
+    <div class="method-list">
+        <div class="method-item" data-aos="fade-up">
+            <h3><a href="canning.html" class="method-link">Canning</a></h3>
+            <p>Lock in freshness with heat-sealed jars for long-term storage.</p>
         </div>
-    </section>
+        <div class="method-item" data-aos="fade-up">
+            <h3><a href="fermentation.html" class="method-link">Fermentation</a></h3>
+            <p>Enhance flavors naturally using beneficial bacteria.</p>
+        </div>
+        <div class="method-item" data-aos="fade-up">
+            <h3><a href="dehydration.html" class="method-link">Dehydration</a></h3>
+            <p>Remove moisture to keep food fresh without refrigeration.</p>
+        </div>
+        <div class="method-item" data-aos="fade-up">
+            <h3><a href="freezing.html" class="method-link">Freezing</a></h3>
+            <p>Store food at low temperatures to retain taste and texture.</p>
+        </div>
+        <div class="method-item" data-aos="fade-up">
+            <h3><a href="salting.html" class="method-link">Salting</a></h3>
+            <p>Use salt to naturally extend the shelf life of perishable foods.</p>
+        </div>
+    </div>
+</section>
 
     <footer class="footer">
         <p>&copy; 2025 Food Preservation Techniques. All Rights Reserved.</p>
