--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#methods">Methods</a></li>
                     <li><a href="#guides">Guides</a></li>
-                   <li><a href="https://www.instagram.com/food.preservation?igsh=MXZoYWNra3NwdHU1ag==" target="_blank">Contact</a></li>
+                   <li><a href="https://www.instagram.com/foodpreservetech?utm_source=qr&igsh=OHFhM2VreHp5emZz" target="_blank">Contact</a></li>
                 </ul>
             </nav>
         </div>
